# game

./: CMakeLists.txt  board.h  dice.cpp  dice.h  main.cpp  tile.hpp
sources/: CMakeLists.txt  board.cpp  board.h  ctrl.cpp  ctrl.h  dice.cpp  dice.h  dice.hpp  dices.cpp  dices.h  main.cpp  mainWindow.cpp  mainWindow.h  mdt.cpp  mdt.h  tile.cpp  tile.h  tile.hpp
